# esqueleto

./: .gitignore  BS_threadpool.cpp  BS_threadpool.hpp  CMakeLists.txt  CMakePresets.json  README.md  compiled_with.h  git_hash.h.in  main.cpp  palette.cpp  palette.h  shutdownwebserver.service  thread_test.cpp  thread_test.hpp  vcpkg.json  version.cmake  webpage.html
.githooks/: pre-commit
